# 3body

./: .gitignore  README.md  certificate.json  manifest.json  pyproject.toml
docs/: ARCHITECTURE.md  CURRENT_HYPOTHESES.md  DEVELOPMENT.md  GITHUB_PAGES.md  GLOBAL_CLOSED_FORM_PROGRAM.md  INTERPRETATION_METHOD.md  JACOBI_ESCAPE_CONE_THEOREM.md  LITERATURE_COMPARISON.md  LLM_HANDOFF_THREE_BODY_CHALLENGE.md  LOCAL_CHANGES_AUDIT.md  MAINTENANCE_FREEZE_REVIEW.md  PAPER_READINESS_REVIEW.md  PREDICTION_METHOD.md  PROJECT_SCOPE.md  RANDOM_THREE_BODY_DEMO.md  RESEARCH_PROGRAM.md  RESEARCH_RUNS.md  ROADMAP.md  SCIENCE_FOUNDATION.md  SOLUTION_SPACE.md  STRATEGIC_REVIEW.md  THEOREM_CANDIDATES.md  THREE_BODY_ANSWER_WORKFLOW.md  VALIDATION_GUARDRAILS.md
examples/: figure_eight_answer_input.json
tests/: test_analysis_atlas.py  test_boundary_collapse.py  test_cli.py  test_collision_gateway.py  test_compact_model.py  test_engine_api.py  test_ensembles.py  test_escape_bounds.py  test_exchange.py  test_flyby_sweep.py  test_general_three_body.py  test_hierarchy.py  test_hysteresis.py  test_interpretation.py  test_prime_challenges.py  test_reduced_state.py  test_research_checks.py  test_research_pipeline.py  test_resolution_study.py  test_restricted_three_body.py  test_rule_miner.py  test_scattering.py  test_shape.py  test_static_site.py  test_theorem_suite.py  test_transition_boundaries.py  test_transition_events.py  test_transition_graph.py  test_transition_model.py  test_transition_survey.py  test_two_body.py  test_validation.py  test_variational.py  test_word_algebra.py
(+61 files in other folders)
